--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 640px;
+  height: 1205px;
+  border: 1px #EEEEEE solid;
+  border-radius: 24px;
+  box-shadow: 0 0 14px -10px #000000;
+  margin: 5% 5%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
+  border-bottom: 1px #EEEEEE solid;
+}
+
+.App-header h1 {
+  margin-left: 30px;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Add-movies {
+  height: 425px;
+}
+
+.Avatar-initals {
+  background-color: #61A0FF;
+  height: 64px;
+  width: 64px;
+  border-radius: 50%;
+  margin: auto 25px auto 40px;
+}
+.Avatar-initals p {
+  font-size: 24px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 15px;
+}
+
+.Subtitles {
+  position: relative;
+  bottom: 70px;
+  right: -128px;
+  font-size: 16px;
+  height: 25px;
+  font-family: Helvetica, sans-serif;
+  color: #AAAAAA;
+}
+
+.Movie-row {
+  display: flex;
+  border-top: 1px #EEEEEE solid;
+  white-space: nowrap;
+  height: 128px;
+  width: 100%;
+  margin-top: -47px;
+}
+
+.Star-rating{
+  margin: auto 40px auto 0;
+}
+
+.Star-rating img {
+  height: 25px;
+  width: 25px;
+  margin: 0 3px;
+}
+
+.Add-movie-section {
+  height: 72px;
+  display: flex;
+  margin: 20px auto;
+}
+
+.Add-movie-section .Star-rating {
+  margin-right: 40px;
 }
