--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,81 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: SF Pro Display Semi Bold;
+  src:url(../public/sf_pro_display_medium.otf);
+}
+
+@font-face {
+  font-family: SF Pro Display Regular;
+  src: url(../public/sf_pro_display_regular.otf);
+}
+
+h1{
+  font-family: "SF Pro Display Semi Bold", sans-serif;
+}
+
+h2 {
+  width: 212px;
+  height: 35px;
+  margin: 35px auto 0 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "SF Pro Display Regular", sans-serif;
+}
+
+label {
+  font-size: 24px;
+  margin: auto 40px;
+  width: 105px;
+  flex-grow: 2;
+  font-family: "SF Pro Display Regular", sans-serif;
+}
+
+input[type="text" i] {
+  width: 438px;
+  margin-right: 40px;
+  border-radius: 8px;
+  padding: 15px 0 8px 24px;
+  font-size: 24px;
+  border: 1px #CCCCCC solid;;
+}
+
+::placeholder {
+  color: #CCCCCC;
+  font-family: "SF Pro Display Regular", sans-serif;
+  font-size: 24px;
+  padding: 15px 0 8px 0;
+}
+
+select {
+  width: 446px;
+  margin-right: 40px;
+  border-radius: 8px;
+  border: 1px #CCCCCC solid;
+  color: #CCCCCC;
+  font-family: "SF Pro Display Regular", sans-serif;
+  font-size: 24px;
+  padding: 15px 0 8px 24px;
+}
+
+option {
+  color: #CCCCCC;
+  font-family: "SF Pro Display Regular", sans-serif;
+  font-size: 24px;
+  padding: 15px 0 8px 24px;
+}
+
+button {
+  margin: 0 auto 15px auto;
+  display: block;
+  width: 560px;    
+  height: 72px;
+  font-size: 24px;
+  color: white;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  background-image: linear-gradient(#94BFFF, #61A0FF);
+}
